WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35834
[Qt] QGraphicsWebView: Arrow keys scroll the graphics-view instead of the web-page
https://bugs.webkit.org/show_bug.cgi?id=35834
Summary
[Qt] QGraphicsWebView: Arrow keys scroll the graphics-view instead of the web...
Noam Rosenthal
Reported
2010-03-06 14:44:05 PST
To reproduce: open the above website: - QtLauncher -graphicsbased -url
http://www.youtube.com/xl
- Resize the QtLauncher window to be a little smaller - Press the down key several times While the keys should affect the list selection, they actually move around the whole QGraphicsWebView. This does not happen with QWebView (no -graphicsbased), hence the assumption that the bug is in the "Webkit Qt" module I tested on Ubuntu 9.04, but I believe the problem exists on all Qt platforms.
Attachments
Patch
(1.17 KB, patch)
2010-04-27 06:15 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2010-03-23 06:15:27 PDT
Reproduced on Windows as well (though its a bit harder than on linux). I could also notice that it happens more often if you play with the tab switching. QtLauncher only have the address bar and the web view that takes the focus, however, sometimes, the focus gets taken by another widget between the two (so it sometimes takes 2 tabs to switch the focus from the address to the web view). The bug happens when you press the arrow keys while focused on this intermediate widget. If you don't resize the window a bit, you still get the focus steal problem, but you won't see the "move around the whole QGraphicsWebView" problem. According to Noam this bug is an annoyance for many embedded developers. Setting to P1-minor since I think that this is worth fixing it for the next release.
Benjamin Poulain
Comment 2
2010-04-27 06:15:50 PDT
Created
attachment 54412
[details]
Patch QGraphicsView do not do anything wrong. It does not use the event so it ends up in the scroll area code. We just have a make sure the scene has the correct size when we resize the graphicswebview.
Kenneth Rohde Christiansen
Comment 3
2010-04-27 06:47:26 PDT
Comment on
attachment 54412
[details]
Patch I managed to trick a similar bug using wheel and opening a combobox and it scrolled the graphics view instead of the page and left behind garbage.
WebKit Commit Bot
Comment 4
2010-04-27 12:34:09 PDT
Comment on
attachment 54412
[details]
Patch Clearing flags on attachment: 54412 Committed
r58321
: <
http://trac.webkit.org/changeset/58321
>
WebKit Commit Bot
Comment 5
2010-04-27 12:34:14 PDT
All reviewed patches have been landed. Closing bug.
Noam Rosenthal
Comment 6
2010-04-27 14:37:32 PDT
So a developer implementing an application with QGraphicsWebView and keypad navigation would have to do this sceneRect step each time?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug