2010-04-27  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QGraphicsWebView: Arrow keys scroll the graphics-view instead of the web-page
        https://bugs.webkit.org/show_bug.cgi?id=35834

        The scene should always have the size of the web view otherwhise it is
        possible to scroll the graphics view.

        * QtLauncher/webview.cpp:
        (WebViewGraphicsBased::resizeEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@58321 bbb929c8-8fbe-4397-9dbb-9b2b20218538